--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
     </main>
  
 </div>
-
+<footer class="footer">
+    <div class="footerWrapper">
+     <h4> An Open Commitment by Awlad Hossain</h4>
+    <div class="icon">
+     <img src="./assets/facebook.png" alt="">
+     <img src="./assets/github.png" alt="">
+     <img src="./assets/linkedin-icon 1.png" alt="">
+    </div>
+    </div>
+ </footer>
   </body>
 </html>
