--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
     <div class="footerWrapper">
      <h4> An Open Commitment by Awlad Hossain</h4>
     <div class="icon">
-     <img src="./assets/facebook.png" alt="">
-     <img src="./assets/github.png" alt="">
-     <img src="./assets/linkedin-icon 1.png" alt="">
+    <a  href="https://www.facebook.com" target="_blank"> <img src="./assets/facebook.png" alt=""></a>
+     <a href="https://www.github.com" target="_blank"><img src="./assets/github.png" alt=""></a>
+     <a href="https://www.linkedin.com" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
     </div>
     </div>
  </footer>
