change header id name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
        
             <nav class="headerNav">
                 <h1>Awlad.H</h1>
