change image ali text in hero section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section id="heroSection">
 
             <div class="heroWrapper">
-                <img src="./assets/Group.png" alt="" />
+                <img src="./assets/Group.png" alt="this is hero section image" />
 
                 <h1>"In the near future, I hope to <br> become a Developer."</h1>
         
